<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorBackground"
    tools:context=".TripDayFragment">

    <TextView
        android:id="@+id/day_number_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/icon_highlight"
        style="@style/ScreenHeading"
        tools:text="Day #"/>

    <TextView
        android:id="@+id/icon_highlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ScreenHeading"
        android:textColor="@color/colorControlHighlightOff"
        android:text="@string/fa_icon_star" />

    <EditText
        android:id="@+id/day_primary_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/day_number_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/input_vertical_margin"
        android:lines="1"
        android:maxLines="1"
        android:inputType="text|textCapSentences"
        style="@style/TextInput"
        android:hint="@string/input_trip_day_primary_description"/>

    <EditText
        android:id="@+id/destination_item"
        style="@style/TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_destination_button"
        app:layout_constraintTop_toBottomOf="@id/day_primary_description"
        android:hint="@string/input_trip_day_destination"
        android:inputType="text|textCapSentences"
        android:lines="1"
        android:maxLines="1" />

    <ImageButton
        android:id="@+id/search_destination_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/destination_item"
        app:layout_constraintTop_toBottomOf="@id/day_primary_description"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AppButton"
        android:src="@drawable/ic_action_google_maps"
        android:contentDescription="@string/aria_day_destination_button_map_search" />

    <Button
        android:id="@+id/save_destination_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/destination_item"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/AccentButton.Condensed"
        android:text="@string/trip_day_additional_destination_button_label" />

    <TextView
        android:id="@+id/day_destination_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_destination_button"
        app:layout_constraintBottom_toTopOf="@id/day_secondary_description"/>

    <EditText
        android:id="@+id/day_secondary_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day_destination_list"
        android:inputType="textMultiLine|textCapSentences"
        style="@style/TextInput"
        android:hint="@string/input_trip_day_secondary_notes" />
    <!-- TODO: try a Guideline to pull this item down but not pull the save button up
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintBottom_toTopOf="@id/save_trip_day_button" -->

    <Button
        android:id="@+id/save_trip_day_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AccentButton"
        android:text="@string/trip_day_save_button_label"
        app:layout_constraintTop_toBottomOf="@id/day_secondary_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"/>

</android.support.constraint.ConstraintLayout>

</ScrollView>