<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="0dp"
    android:paddingEnd="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="0dp">

    <TextView
        android:id="@+id/destination_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/icon_keep"
        style="@style/TripDayDestinationItem"
        tools:text="Destination Description"/>

    <TextView
        android:id="@+id/icon_keep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/icon_trash"
        app:layout_constraintBaseline_toBaselineOf="@id/icon_trash"
        style="@style/TripDayDestinationIcon"
        android:text="@string/fa_icon_back"
        android:textColor="@color/colorControlHighlightOff"/>

    <TextView
        android:id="@+id/icon_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        style="@style/TripDayDestinationIcon"
        android:textColor="@color/colorControlHighlightOff"
        android:text="@string/fa_icon_trash" />

    <ImageView
        android:id="@+id/divider_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/destination_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        android:layout_marginTop="@dimen/trip_day_destination_divider_vertical_margin"
        android:background="@color/colorDividerLineMedium"
        android:contentDescription="@string/aria_divider_line" />

</android.support.constraint.ConstraintLayout>